clear errors when input box is clicked

--- a/lists/static/tests/tests.html
+++ b/lists/static/tests/tests.html
@@ -22,14 +22,20 @@
 	<script>
 
 		QUnit.test("errors should be hidden on keypress", function (assert) {
-			initialize();
+			window.Superlists.initialize();
 			$('input[name="text"]').trigger('keypress');
 			assert.equal($('.has-error').is(':visible'), false);
 		});
 
 		QUnit.test("errors aren't hidden if there is no keypress", function(assert) {
-			initialize();
+			window.Superlists.initialize();
 			assert.equal($('.has-error').is(':visible'), true);
+		});
+
+		QUnit.test("errros should be hidden on text input click", function(assert) {
+			window.Superlists.initialize();
+			$('input[name="text"]').trigger('click');
+			assert.equal($('.has-error').is(':visible'), false);
 		});
 
 	</script>
